chore: standardize Java indentation
Format all Java sources with four-space indentation per AGENTS.md and .editorconfig.